--- a/about.html
+++ b/about.html
@@ -120,19 +120,21 @@
                         <a class="description text-color-primary underline" href="">careers</a>
                     </div>
                 </div>
-                <div class="input">
-                    <div class="caption">
-                        Sign up for news, offers, and more
-                    </div>
-                    <div class="caption input-group">
-                        <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
+                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                    <div class="input">
+                        <div class="caption">
+                            Sign up for news, offers, and more
+                        </div>
+                        <div class="caption input-group">
+                            <input type="email" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="submit">
+                                    <i class="fas fa-arrow-right"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </form>
                 <div class="social-media">
                     <a href="">
                         <i class="fab fa-instagram text-color-primary"></i>
@@ -151,5 +153,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
     </body>
 </html>
