--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                     <br />
                     ???
                 </div>
-                <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form id="contact-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">full name *</label>  
@@ -122,19 +122,21 @@
                         <a class="description text-color-primary underline" href="">careers</a>
                     </div>
                 </div>
-                <div class="input">
-                    <div class="caption">
-                        Sign up for news, offers, and more
-                    </div>
-                    <div class="caption input-group">
-                        <input type="text" class="form-control bg-color-primary text-color-primary" placeholder="your email">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
+                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                    <div class="input">
+                        <div class="caption">
+                            Sign up for news, offers, and more
+                        </div>
+                        <div class="caption input-group">
+                            <input type="email" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="submit">
+                                    <i class="fas fa-arrow-right"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </form>
                 <div class="social-media">
                     <a href="">
                         <i class="fab fa-instagram text-color-primary"></i>
@@ -148,7 +150,7 @@
                 </div>
             </div>
         </div>
-        
+  
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
