[M4] Added text content for About and Contact pages

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 <div class="content">
                     <div class="bg-color-primary">
                         <div class="title">our story.</div>
-                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                        <div class="description">on a painted desert night, long lost friends were serendipitously found. old memories were shared and a new bond was forged, driven by a simple but powerful belief &mdash; <span class="bold">we can all be better.</span></div>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -69,7 +69,7 @@
                 <div class="content">
                     <div class="bg-color-primary">
                         <div class="title">our mission.</div>
-                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                        <div class="description">values like responsibility, mindfulness, and interconnectedness aren’t just good business practices. they’re values of a lifestyle that we believe in and strive to embody in all that we do. at be mindful, we're building a better, more sustainable future through a variety of mindful endeavors and actions.</div>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -80,19 +80,8 @@
             <div class="container">
                 <div class="content">
                     <div class="bg-color-primary">
-                        <div class="title">???</div>
-                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
-                    </div>
-                </div>
-                <img src="images/test-d.jpeg">
-            </div>
-        </div>
-        <div class="info left bg-color-primary text-color-primary">
-            <div class="container">
-                <div class="content">
-                    <div class="bg-color-primary">
                         <div class="title">join our team.</div>
-                        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue nisl sed suscipit suscipit. Aliquam erat volutpat. Integer ullamcorper vehicula sapien, ac laoreet nisl tincidunt at. Duis volutpat nibh sem, nec mollis nunc imperdiet vel.</div>
+                        <div class="description">our team represents a diverse spectrum of experiences and perspectives. our products create a personal, intimate connection with the world around us. let's make the world a better place, together.</div>
                         <a href="" class="button">careers page</a>
                     </div>
                 </div>
