--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,11 @@
         </div>
         <div id="contact-form" class="bg-color-primary">
             <div class="inner bg-color-primary">
-                <div class="title text-color-primary">contact us.</div>
+                <div class="title text-color-primary">get in touch.</div>
                 <div class="description text-color-primary">
-                    ???
-                    <br />
-                    ???
+                    have an idea for a new flavor or want to sell our beverages at your store? Let's chat.
                 </div>
-                <form id="contact-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">full name *</label>  
