--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <br />
                         lemon ginger beverages today
                     </div>
+                    <div>
                         <a href="" class="button">buy now</a>
                     </div>
                 </div>
@@ -139,15 +140,15 @@
                         <a class="description text-color-primary underline" href="">careers</a>
                     </div>
                 </div>
-                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
                     <div class="input">
                         <div class="caption">
                             Sign up for news, offers, and more
                         </div>
                         <div class="caption input-group">
-                            <input type="email" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
+                            <input type="email" name="EMAIL" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit">
+                                <button class="btn btn-outline-secondary" type="submit" name="subscribe">
                                     <i class="fas fa-arrow-right"></i>
                                 </button>
                             </div>
