Fixed styling on contact form, added link destinations to footer

--- a/about.html
+++ b/about.html
@@ -125,14 +125,14 @@
                     </div>
                 </form>
                 <div class="social-media">
-                    <a href="">
+                    <a href="https://instagram.com/bemindfulbeverages">
                         <i class="fab fa-instagram text-color-primary"></i>
                     </a>
-                    <a href="">
-                        <i class="fab fa-facebook-f text-color-primary"></i>
-                    </a>
-                    <a href="">
+                    <a href="https://twitter.com/bebeverages">
                         <i class="fab fa-twitter text-color-primary"></i>
+                    </a>
+                    <a href="https://linkedin.com/company/bemindfulbeverages">
+                        <i class="fab fa-linkedin-in text-color-primary"></i>
                     </a>
                 </div>
             </div>
