--- a/contact.html
+++ b/contact.html
@@ -57,27 +57,27 @@
             <div class="inner bg-color-primary">
                 <div class="title text-color-primary">get in touch.</div>
                 <div class="description text-color-primary">
-                    have an idea for a new flavor or want to sell our beverages at your store? Let's chat.
+                    have an idea for a new flavor or want to sell our beverages at your store? let's chat.
                 </div>
                 <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">full name *</label>  
-                            <input id="contact-full-name" type="text" class="form-control caption is-default" name="Full Name" placeholder="">
+                            <input id="contact-full-name" type="text" class="form-control caption bg-color-primary is-default" name="Full Name" placeholder="">
                         </div>
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">phone number</label>
-                            <input id="contact-phone-number" type="tel" class="form-control caption is-default" name="Phone Number" placeholder="">
+                            <input id="contact-phone-number" type="tel" class="form-control caption bg-color-primary is-default" name="Phone Number" placeholder="">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">email address *</label>
-                            <input id="contact-email-address" type="email" class="form-control caption is-default" name="_replyto" placeholder="">
+                            <input id="contact-email-address" type="email" class="form-control caption bg-color-primary is-default" name="_replyto" placeholder="">
                         </div>
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">subject</label>
-                            <select id="contact-subject" type="text" class="custom-select form-control caption text-color-primary is-default" name="Subject" placeholder="">
+                            <select id="contact-subject" type="text" class="custom-select form-control caption bg-color-primary text-color-primary is-default" name="Subject" placeholder="">
                                 <option selected value="default">choose one...</option>
                                 <option value="Product Feedback">product feedback</option>
                                 <option value="Wholesale Inquiry">wholesale inquiry</option>
@@ -90,11 +90,11 @@
                     </div>
                     <div class="mb-3">
                         <label class="caption text-color-primary">how'd you hear about us?</label>
-                        <input id="contact-referral" type="text" class="form-control caption is-default" name="How'd You Hear About Us?" placeholder="">
+                        <input id="contact-referral" type="text" class="form-control caption bg-color-primary is-default" name="How'd You Hear About Us?" placeholder="">
                     </div>
                     <div class="mb-3">
                         <label class="caption text-color-primary">message *</label>
-                        <textarea id="contact-message" class="form-control caption is-default" rows="5" name="Message"></textarea>
+                        <textarea id="contact-message" class="form-control caption bg-color-primary is-default" rows="5" name="Message"></textarea>
                     </div>
                     <input type="submit" class="button" value="send">
                 </form>
@@ -136,14 +136,14 @@
                     </div>
                 </form>
                 <div class="social-media">
-                    <a href="">
+                    <a href="https://instagram.com/bemindfulbeverages">
                         <i class="fab fa-instagram text-color-primary"></i>
                     </a>
-                    <a href="">
-                        <i class="fab fa-facebook-f text-color-primary"></i>
-                    </a>
-                    <a href="">
+                    <a href="https://twitter.com/bebeverages">
                         <i class="fab fa-twitter text-color-primary"></i>
+                    </a>
+                    <a href="https://linkedin.com/company/bemindfulbeverages">
+                        <i class="fab fa-linkedin-in text-color-primary"></i>
                     </a>
                 </div>
             </div>
