[M6] Mobile responsiveness for section banners

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">@bemindfulbeverages #bebetter</div>
+            <div class="text-color-primary title">@bemindfulbeverages <br />#bebetter</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
