--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">@bemindfulbeverages #wecanallbebetter</div>
+            <div class="text-color-primary title">@bemindfulbeverages <br />#wecanallbebetter</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
