--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">be better. be mindful.</div>
+            <div class="text-color-primary title">be better. <br />be mindful.</div>
         </div>
         <div id="latest-flavors" class="bg-color-primary">
             <img class="left" src="images/test-e.png">
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">be aware. be focused.</div>
+            <div class="text-color-primary title">be aware. <br />be focused.</div>
         </div>
         <div class="info right bg-color-primary">
             <div class="container">
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">we can all be better.</div>
+            <div class="text-color-primary title">we can all <br />be better.</div>
         </div>
         <div id="merch" class="bg-color-primary">
             <img src="images/merch.png">
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="section-banner bg-color-primary">
-            <div class="text-color-primary title">share your story: #bemindful</div>
+            <div class="text-color-primary title">share your story: <br />#bemindful</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
             <div class="row">
