[M6] Mobile responsiveness for Latest Flavors section

--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,11 @@
         </div>
         <div id="contact-form" class="bg-color-primary">
             <div class="inner bg-color-primary">
-                <div class="title text-color-primary">get in touch.</div>
-                <div class="description text-color-primary">
-                    have an idea for a new flavor or want to sell our beverages at your store? let's chat.
+                <div class="form-header">
+                    <div class="title text-color-primary">get in touch.</div>
+                    <div class="description text-color-primary">
+                        have an idea for a new flavor or want to sell our beverages at your store? let's chat.
+                    </div>
                 </div>
                 <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="row">
