[M6] Mobile responsiveness for Jumbotron section on Home page and fixed responsiveness for Section Banners on all pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-banner bg-color-primary">
+        <div class="section-banner first bg-color-primary">
             <div class="text-color-primary title">be better. <br />be mindful.</div>
         </div>
         <div id="latest-flavors" class="bg-color-primary">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-banner bg-color-primary">
+        <div class="section-banner second bg-color-primary">
             <div class="text-color-primary title">be aware. <br />be focused.</div>
         </div>
         <div class="info right bg-color-primary">
@@ -106,7 +106,7 @@
                 <img src="images/test-d.jpeg">
             </div>
         </div>
-        <div class="section-banner bg-color-primary">
+        <div class="section-banner third bg-color-primary">
             <div class="text-color-primary title">we can all <br />be better.</div>
         </div>
         <div id="merch" class="bg-color-primary">
@@ -120,7 +120,7 @@
                 <div style="clear: both"></div>
             </div>
         </div>
-        <div class="section-banner bg-color-primary">
+        <div class="section-banner fourth bg-color-primary">
             <div class="text-color-primary title">share your story: <br />#bemindful</div>
         </div>
         <div id="photo-highlights" class="container-fluid">
