Added background gradients to Home page jumbotron and Navbar logo on all pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="center">
                     <a href="index.html">
-                        <img src="images/logo.png">
+                        <img src="images/logo_inverse.png" class="gradient-bg">
                     </a>
                 </div>
                 <div class="links">
@@ -55,7 +55,7 @@
                         <br />
                         all natural.
                     </div>
-                    <div id="bg-gradient"></div>
+                    <div id="bg-gradient" class="gradient-bg"></div>
                 </div>
                 <div class="image">
                     <img src="images/two-cans.png">
