--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="center">
                     <a href="index.html">
-                        <img src="images/logo.png">
+                        <img src="images/logo_inverse.png" class="gradient-bg">
                     </a>
                 </div>
                 <div class="links">
