--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 </div>
                 <div class="center">
                     <a href="index.html">
-                        <img src="images/logo_inverse.png" class="gradient-bg">
+                        <div class="gradient-bg"></div>
+                        <img src="images/logo_inverse.png">
                     </a>
                 </div>
                 <div class="links">
