[M6] Mobile responsiveness for Navbar

--- a/index.html
+++ b/index.html
@@ -20,32 +20,39 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <div id="navbar" class="bg-color-primary">
+        <!--NEW NAVBAR-->
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="">beverages</a>
-                    </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="">merch</a>
-                    </div>
-                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
                         <img src="images/logo_inverse.png">
                     </a>
                 </div>
-                <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="about.html">about</a>
-                    </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="contact.html">contact</a>
-                    </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="links">
+                            <div>
+                                <a class="nav-link description text-color-primary underline" href="">beverages </a>
+                            </div>
+                            <div>
+                                <a class="nav-link description text-color-primary underline" href="">merch</a>
+                            </div>
+                        </div>
+                    <!---->
+                        <div class="links">
+                            <div>
+                                <a class="nav-link description text-color-primary underline" href="about.html">about</a>
+                            </div>
+                            <div>
+                                <a class="nav-link description text-color-primary underline" href="contact.html">contact</a>
+                            </div>
+                        </div>
                 </div>
             </div>
-        </div>
+        </nav>
         <div id="jumbotron" class="bg-color-primary">
             <div class="container">
                 <div class="text">
