--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <!--NEW NAVBAR-->
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar .navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="center">
@@ -32,24 +31,23 @@
                         <img src="images/logo_inverse.png">
                     </a>
                 </div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="links">
-                            <div>
-                                <a class="nav-link description text-color-primary underline" href="">beverages </a>
-                            </div>
-                            <div>
-                                <a class="nav-link description text-color-primary underline" href="">merch</a>
-                            </div>
+                <div class="collapse navbar-collapse">
+                    <div class="links">
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="">beverages</a>
                         </div>
-                    <!---->
-                        <div class="links">
-                            <div>
-                                <a class="nav-link description text-color-primary underline" href="about.html">about</a>
-                            </div>
-                            <div>
-                                <a class="nav-link description text-color-primary underline" href="contact.html">contact</a>
-                            </div>
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="">merch</a>
                         </div>
+                    </div>
+                    <div class="links">
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="about.html">about</a>
+                        </div>
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="contact.html">contact</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
