--- a/about.html
+++ b/about.html
@@ -20,32 +20,37 @@
         <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
-        <div id="navbar" class="bg-color-primary">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="">beverages</a>
-                    </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="">merch</a>
-                    </div>
-                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar .navbar-collapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
                         <img src="images/logo_inverse.png">
                     </a>
                 </div>
-                <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="about.html">about</a>
+                <div class="collapse navbar-collapse">
+                    <div class="links">
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="">beverages</a>
+                        </div>
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="">merch</a>
+                        </div>
                     </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="contact.html">contact</a>
+                    <div class="links">
+                        <div>
+                            <a class="nav-link description text-color-primary underline active" href="about.html">about</a>
+                        </div>
+                        <div>
+                            <a class="nav-link description text-color-primary underline" href="contact.html">contact</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </nav>
         <div id="jumbotron" class="bg-color-primary">
             <div class="container">
                 <div class="text">
