Miscellaneous bug fixes

--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="noindex,nofollow" />
         
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="favicon/site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#f8f9fa">
+        <meta name="theme-color" content="#f8f9fa">
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
@@ -34,10 +43,10 @@
                 <div class="collapse navbar-collapse">
                     <div class="links">
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">beverages</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/beverages">beverages</a>
                         </div>
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">merch</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/merch">merch</a>
                         </div>
                     </div>
                     <div class="links">
@@ -88,7 +97,7 @@
                     <div class="bg-color-primary">
                         <div class="title">join our team.</div>
                         <div class="description">our team represents a diverse spectrum of experiences and perspectives. our products create a personal, intimate connection with the world around us. let's make the world a better place, together.</div>
-                        <a href="" class="button">careers page</a>
+                        <a href="careers.html" class="button">careers page</a>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -109,10 +118,10 @@
             <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary underline" href="">press</a>
+                        <a class="description text-color-primary underline" href="press.html">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary underline" href="">careers</a>
+                        <a class="description text-color-primary underline" href="careers.html">careers</a>
                     </div>
                 </div>
                 <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
