--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="noindex,nofollow" />
         
+
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="favicon/site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#f8f9fa">
+        <meta name="theme-color" content="#f8f9fa">
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
@@ -34,10 +44,10 @@
                 <div class="collapse navbar-collapse">
                     <div class="links">
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">beverages</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/beverages">beverages</a>
                         </div>
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">merch</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/merch">merch</a>
                         </div>
                     </div>
                     <div class="links">
@@ -77,9 +87,9 @@
             <div class="container">
                 <div class="text-color-primary">
                     <div class="icons">
-                        <img src="images/icon-1.png">
-                        <img src="images/icon-2.png">
-                        <img src="images/icon-3.png">
+                        <img src="images/icon-1.svg">
+                        <img src="images/icon-2.svg">
+                        <img src="images/icon-3.svg">
                     </div>
                     <div class="title">now available!</div>
                     <div class="description">
@@ -88,7 +98,7 @@
                         lemon ginger beverages today
                     </div>
                     <div>
-                        <a href="" class="button">buy now</a>
+                        <a href="https://shop.bemindfulbeverages.com/beverages" class="button">buy now</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +116,7 @@
                             powered by purpose.
                         </div>
                         <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
-                        <a href="" class="button">learn more</a>
+                        <a href="about.html" class="button">learn more</a>
                     </div>
                 </div>
                 <img src="images/test-d.jpeg">
@@ -120,7 +130,7 @@
             <div class="container">
                 <div>
                     <div class="display text-color-primary">represent the mindful mindset.</div>
-                    <a href="" class="button">shop merch</a>
+                    <a href="https://shop.bemindfulbeverages.com/merch" class="button">shop merch</a>
                     <div style="clear: both"></div>
                 </div>
                 <div style="clear: both"></div>
@@ -140,10 +150,10 @@
             <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary underline" href="">press</a>
+                        <a class="description text-color-primary underline" href="press.html">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary underline" href="">careers</a>
+                        <a class="description text-color-primary underline" href="careers.html">careers</a>
                     </div>
                 </div>
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
