--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="noindex,nofollow" />
         
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="favicon/site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#f8f9fa">
+        <meta name="theme-color" content="#f8f9fa">
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
@@ -34,10 +43,10 @@
                 <div class="collapse navbar-collapse">
                     <div class="links">
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">beverages</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/beverages">beverages</a>
                         </div>
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="">merch</a>
+                            <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/merch">merch</a>
                         </div>
                     </div>
                     <div class="links">
@@ -70,7 +79,7 @@
                 <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label class="caption text-color-primary">full name *</label>  
+                            <label class="caption text-color-primary">full name <span class="asterisk">*</span></label>
                             <input id="contact-full-name" type="text" class="form-control caption bg-color-primary is-default" name="Full Name" placeholder="">
                         </div>
                         <div class="col-md-6 mb-3">
@@ -80,7 +89,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label class="caption text-color-primary">email address *</label>
+                            <label class="caption text-color-primary">email address <span class="asterisk">*</span></label>
                             <input id="contact-email-address" type="email" class="form-control caption bg-color-primary is-default" name="_replyto" placeholder="">
                         </div>
                         <div class="col-md-6 mb-3">
@@ -101,7 +110,7 @@
                         <input id="contact-referral" type="text" class="form-control caption bg-color-primary is-default" name="How'd You Hear About Us?" placeholder="">
                     </div>
                     <div class="mb-3">
-                        <label class="caption text-color-primary">message *</label>
+                        <label class="caption text-color-primary">message <span class="asterisk">*</span></label>
                         <textarea id="contact-message" class="form-control caption bg-color-primary is-default" rows="5" name="Message"></textarea>
                     </div>
                     <input type="submit" class="button" value="send">
@@ -122,10 +131,10 @@
             <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary underline" href="">press</a>
+                        <a class="description text-color-primary underline" href="press.html">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary underline" href="">careers</a>
+                        <a class="description text-color-primary underline" href="careers.html">careers</a>
                     </div>
                 </div>
                 <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
