--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <a href="about.html" class="button">learn more</a>
                     </div>
                 </div>
-                <img src="images/test-d.jpeg">
+                <img src="images/IMG_7293.jpg">
             </div>
         </div>
         <div class="section-banner third bg-color-primary">
