Moved dropdown input style to common.css

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">subject</label>
-                            <select id="contact-subject" type="text" class="custom-select form-control caption bg-color-primary text-color-primary is-default" name="Subject" placeholder="">
+                            <select id="contact-subject" type="text" class="custom-select form-control caption bg-color-primary text-color-primary is-default dropdown-input" name="Subject" placeholder="">
                                 <option selected value="default">choose one...</option>
                                 <option value="Product Feedback">product feedback</option>
                                 <option value="Wholesale Inquiry">wholesale inquiry</option>
