Fixed capitalization on footer message

--- a/press.html
+++ b/press.html
@@ -123,7 +123,7 @@
                 <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
                     <div class="input">
                         <div class="caption">
-                            Sign up for news, offers, and more
+                            sign up for news, offers, and more
                         </div>
                         <div class="caption input-group">
                             <input type="email" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
