--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
                     <div class="input">
                         <div class="caption">
-                            Sign up for news, offers, and more
+                            sign up for news, offers, and more
                         </div>
                         <div class="caption input-group">
                             <input type="email" name="EMAIL" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
