Replaced mockups and optimized images

--- a/careers.html
+++ b/careers.html
@@ -37,7 +37,7 @@
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
-                        <img src="images/logo_inverse.png">
+                        <img src="images/logo.png">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
@@ -60,12 +60,12 @@
                 </div>
             </div>
         </nav>
-        <div id="jumbotron" class="bg-color-primary">
+        <div id="jumbotron" class="bg-color-primary subpage-jumbotron image-left">
             <div class="container">
-                <img src="images/test-e.png">
                 <div class="text">
                     <div class="display text-color-primary">careers.</div>
                 </div>
+                <img src="images/bottomup-lemon.png">
             </div>
         </div>
         <div id="careers">
@@ -73,7 +73,7 @@
                 <div class="content">
                     <div class="title text-color-primary">no open postions at this time.</div>
                     <div class="description text-color-primary">thank you for your interest in joining our team! unfortunately, we do not currently have any available positions. if you’d like to be notified when new positions become available, subscribe to our mailing list below.</div>
-                    <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                    <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
                         <div class="input">
                             <div class="caption input-group">
                                 <input type="email" class="form-control text-color-primary is-default" placeholder="your email">
