--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
-                        <img src="images/logo_inverse.png">
+                        <img src="images/logo.png">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
@@ -74,7 +74,7 @@
                     <div id="bg-gradient" class="gradient-bg"></div>
                 </div>
                 <div class="image">
-                    <img src="images/bmb-2cans-blueberry-front.png">
+                    <img src="images/2cans-blueberry-front.png">
                 </div>
             </div>
         </div>
@@ -82,8 +82,8 @@
             <div class="text-color-primary title">be better. <br />be mindful.</div>
         </div>
         <div id="latest-flavors" class="bg-color-primary">
-            <img class="left" src="images/test-e.png">
-            <img class="right" src="images/bmb-blueberry-topdown.png">
+            <img class="left" src="images/topdown-lemon.png">
+            <img class="right" src="images/topdown-blueberry.png">
             <div class="container">
                 <div class="text-color-primary">
                     <div class="icons">
@@ -119,7 +119,7 @@
                         <a href="about.html" class="button">learn more</a>
                     </div>
                 </div>
-                <img src="images/IMG_7293.jpg">
+                <img src="images/learn-more.jpg">
             </div>
         </div>
         <div class="section-banner third bg-color-primary">
