--- a/press.html
+++ b/press.html
@@ -37,7 +37,7 @@
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
-                        <img src="images/logo_inverse.png">
+                        <img src="images/logo.png">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
@@ -60,12 +60,12 @@
                 </div>
             </div>
         </nav>
-        <div id="jumbotron" class="bg-color-primary">
+        <div id="jumbotron" class="bg-color-primary subpage-jumbotron image-right">
             <div class="container">
                 <div class="text">
                     <div class="display text-color-primary">press.</div>
                 </div>
-                <img src="images/test-f.png">
+                <img src="images/topdown-blueberry.png">
             </div>
         </div>
 
