--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <div class="center">
                     <a href="index.html">
                         <div class="gradient-bg"></div>
-                        <img src="images/logo_inverse.png">
+                        <img src="images/logo.png">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
@@ -65,7 +65,7 @@
                 <div class="text">
                     <div class="display text-color-primary">about us.</div>
                 </div>
-                <img src="images/bmb-blueberry-topdown.png">
+                <img src="images/topdown-blueberry.png">
             </div>
         </div>
         <div class="info right bg-color-primary text-color-primary">
@@ -76,7 +76,7 @@
                         <div class="description">on a painted desert night, long lost friends were serendipitously found. old memories were shared and a new bond was forged, driven by a simple but powerful belief &mdash; <span class="bold">we can all be better.</span></div>
                     </div>
                 </div>
-                <img src="images/IMG_7286.jpg">
+                <img src="images/our-story.jpg">
             </div>
         </div>
         <div class="info left bg-color-primary text-color-primary">
@@ -87,7 +87,7 @@
                         <div class="description">values like responsibility, mindfulness, and interconnectedness aren’t just good business practices. they’re values of a lifestyle that we believe in and strive to embody in all that we do. at be mindful, we're building a better, more sustainable future through a variety of mindful endeavors and actions.</div>
                     </div>
                 </div>
-                <img src="images/IMG_7239.jpg">
+                <img src="images/our-mission.jpg">
                 <div style="clear: both"></div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                         <a href="careers.html" class="button">careers page</a>
                     </div>
                 </div>
-                <img src="images/IMG_7418.jpg">
+                <img src="images/join-our-team.jpg">
                 <div style="clear: both"></div>
             </div>
         </div>
